test/basic/expand_tile_op_tilelang_tcmp.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You can not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// Test that ExpandTileOp + InlineLibCall + FoldTileBufIntrinsics pipeline
// expands pto.tcmp via the default TileLang Python DSL template
// lib/TileOps/tcmp_template.py.
//
// Pipeline: MemrefToTileBuf -> ExpandTileOp -> InlineLibCall -> FoldTileBufIntrinsics
//
// RUN: not ptoas --pto-arch=a5 --pto-backend=vpto --enable-tile-op-expand %s -o - 2>&1 | FileCheck %s

// TCMP currently has no registered TileLang kernel on the A5 tile-op-expand path.
// CHECK: expand_helper found no registered kernel
// CHECK: error: ExpandTileOp: failed to instantiate tilelang template for tcmp

module {
  func.func @TCMP() {
    %a = pto.alloc_tile
      : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=64, v_row=16, v_col=64,
                      blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %b = pto.alloc_tile
      : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=64, v_row=16, v_col=64,
                      blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %tile_buf = pto.alloc_tile
      : !pto.tile_buf<loc=vec, dtype=i8, rows=16, cols=64, v_row=16, v_col=64,
                      blayout=row_major, slayout=none_box, fractal=512, pad=0>

    pto.tcmp ins(%a, %b {cmpMode = #pto<cmp gt>} : !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=64, v_row=16, v_col=64,
                              blayout=row_major, slayout=none_box, fractal=512, pad=0>,
                          !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=64, v_row=16, v_col=64,
                              blayout=row_major, slayout=none_box, fractal=512, pad=0>)
             outs(%tile_buf : !pto.tile_buf<loc=vec, dtype=i8, rows=16, cols=64, v_row=16, v_col=64,
                                   blayout=row_major, slayout=none_box, fractal=512, pad=0>)
    return
  }
}
